package SQLFramework.InjectionDependency;

public enum DbType {
    MYSQL,
    POSTGRES
}
